--- a/Client/Default/Client.vcxproj.filters
+++ b/Client/Default/Client.vcxproj.filters
@@ -481,6 +481,9 @@
     <ClInclude Include="..\Public\EffectRing.h">
       <Filter>05.Effect\Ursa</Filter>
     </ClInclude>
+    <ClInclude Include="..\Public\Skull.h">
+      <Filter>02.GameObjects\Character\Enemy\Skull</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Client.cpp">
@@ -947,6 +950,9 @@
     </ClCompile>
     <ClCompile Include="..\Private\EffectRing.cpp">
       <Filter>05.Effect\Ursa</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Private\Skull.cpp">
+      <Filter>02.GameObjects\Character\Enemy\Skull</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1416,6 +1422,9 @@
     </Filter>
     <Filter Include="05.Effect\Ursa\Pajang">
       <UniqueIdentifier>{a547203e-3316-4986-a1f6-70ecfee13990}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="02.GameObjects\Character\Enemy\Skull">
+      <UniqueIdentifier>{abd3dc63-6a78-4e8c-af4f-4a68c4c5cf42}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
