--- a/Client/Default/Client.vcxproj.filters
+++ b/Client/Default/Client.vcxproj.filters
@@ -484,6 +484,9 @@
     <ClInclude Include="..\Public\Skull.h">
       <Filter>02.GameObjects\Character\Enemy\Skull</Filter>
     </ClInclude>
+    <ClInclude Include="..\public\SoundHud.h">
+      <Filter>04.UI\SoundHUD</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Client.cpp">
@@ -953,6 +956,9 @@
     </ClCompile>
     <ClCompile Include="..\Private\Skull.cpp">
       <Filter>02.GameObjects\Character\Enemy\Skull</Filter>
+    </ClCompile>
+    <ClCompile Include="..\private\SoundHud.cpp">
+      <Filter>04.UI\SoundHUD</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1425,6 +1431,9 @@
     </Filter>
     <Filter Include="02.GameObjects\Character\Enemy\Skull">
       <UniqueIdentifier>{abd3dc63-6a78-4e8c-af4f-4a68c4c5cf42}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="04.UI\SoundHUD">
+      <UniqueIdentifier>{4cbaa979-ec9c-41c1-8f9d-b30a880c1497}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
