--- a/Assets/Scenes/Flogas_Dungeon.yaml
+++ b/Assets/Scenes/Flogas_Dungeon.yaml
@@ -1526,7 +1526,7 @@ GameObjects:
     Com_Transform:
       Translation: [0, -0.583999753, -9.61990929]
       Rotation: [90, -0, 0]
-      Scale: [22.5215054, 26.0779991, 1.79999995]
+      Scale: [22.521492, 26.0779991, 1.79999995]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -1651,8 +1651,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [-7.69327307, 1.31196868, -8.28250313]
-      Rotation: [53.8188362, 4.15750265, -2.1400804e-07]
-      Scale: [0.279445112, 0.181838259, 0.657646418]
+      Rotation: [11.3099308, -0, 0]
+      Scale: [0.0551844947, 0.0456037074, 0.268359751]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -1689,8 +1689,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [-3.36255193, 2.15149903, 1.52762651]
-      Rotation: [53.8188438, 4.15750217, -2.1400804e-07]
-      Scale: [0.608597636, 0.353216141, 1.42763126]
+      Rotation: [11.3099318, -0, 0]
+      Scale: [0.120190933, 0.0885837898, 0.582537174]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -2046,8 +2046,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [3.45357752, 2.11951017, 1.27384841]
-      Rotation: [53.8188438, 4.15750217, -2.14008068e-07]
-      Scale: [0.607642293, 0.352480173, 1.42822695]
+      Rotation: [11.3099327, -0, 0]
+      Scale: [0.119995825, 0.0884001702, 0.582768917]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -2084,8 +2084,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [7.93538809, 1.34698355, -8.84075165]
-      Rotation: [53.8188438, 4.15750217, -2.1400804e-07]
-      Scale: [0.303924412, 0.284062326, 1.42843366]
+      Rotation: [11.3099308, -0, 0]
+      Scale: [0.0600193553, 0.0712423697, 0.582833767]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -2122,8 +2122,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [8.08104706, 1.34008193, -3.44539356]
-      Rotation: [53.8188438, 4.15750217, -2.1400804e-07]
-      Scale: [0.303824723, 0.284091026, 1.42822695]
+      Rotation: [11.3099308, -0, 0]
+      Scale: [0.0599988699, 0.0712502748, 0.582768917]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -2160,8 +2160,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [-7.58388233, 1.30740726, -0.59903425]
-      Rotation: [53.8188438, 4.15750217, -2.1400804e-07]
-      Scale: [0.303881496, 0.284146219, 1.42843604]
+      Rotation: [11.3099308, -0, 0]
+      Scale: [0.060011711, 0.0712637827, 0.582833767]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -2198,8 +2198,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [8.8090992, 2.12478662, -5.06439114]
-      Rotation: [53.81884, 4.15750217, -2.1400804e-07]
-      Scale: [0.608098805, 0.352508515, 1.4282763]
+      Rotation: [11.3099318, -0, 0]
+      Scale: [0.120088786, 0.0884067193, 0.582768917]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -2236,8 +2236,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [1.99510837, 2.0846324, -11.0818748]
-      Rotation: [53.81884, 4.15750217, -2.1400804e-07]
-      Scale: [0.60790199, 0.352541596, 1.4282763]
+      Rotation: [11.3099308, -0, 0]
+      Scale: [0.120048754, 0.0884145722, 0.582768917]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -2274,8 +2274,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [-2.36362243, 2.15001464, -11.0893078]
-      Rotation: [53.81884, 4.15750122, -2.1400804e-07]
-      Scale: [0.500237286, 0.467599064, 1.42846811]
+      Rotation: [11.3099308, -0, 0]
+      Scale: [0.0987851769, 0.117266141, 0.582858145]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -2312,8 +2312,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [-8.99177265, 2.11422968, -4.94483566]
-      Rotation: [53.8188438, 4.1575017, -2.1400804e-07]
-      Scale: [0.513420045, 0.476610363, 1.57346845]
+      Rotation: [11.3099318, -0, 0]
+      Scale: [0.101392373, 0.119524673, 0.642085075]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -2350,8 +2350,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [1.39247227, 2.56994104, 0.420668274]
-      Rotation: [53.81884, 4.15750217, -2.1400804e-07]
-      Scale: [0.850383937, 0.529449701, 1.42846811]
+      Rotation: [11.3099308, -0, 0]
+      Scale: [0.167933017, 0.132778451, 0.582858145]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -2388,8 +2388,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [-1.08791733, 2.59111428, 0.498315632]
-      Rotation: [53.8188438, 4.15750265, -2.1400804e-07]
-      Scale: [0.867478788, 0.514843464, 1.42822695]
+      Rotation: [11.3099327, -0, 0]
+      Scale: [0.171310037, 0.129114926, 0.582768917]
     Com_VIBuffer:
       {}
     Effect_Setting:
