--- a/Assets/Scenes/SoundUI.yaml
+++ b/Assets/Scenes/SoundUI.yaml
@@ -22,7 +22,12 @@ GameObjects:
     Children:
       - 18393420607014667259
       - 8563234386337813842
+      - 7610635975599367528
+      - 17039393454624283840
+      - 10738467829487332636
+      - 6386099594148800019
       - 5463862917828455339
+      - 16913665797910264319
   - Name: BGMScrollBar
     UUID: 18393420607014667259
     Active: false
@@ -92,10 +97,10 @@ GameObjects:
     Instancing: false
     Type: UI
     SortingOrder: 1
-    PassIndex: 5
+    PassIndex: 1
     Hovering: false
     Com_Transform:
-      Position: [517.874023, 305.867737]
+      Position: [517, 305.867737]
       Size: [50, 50]
     Com_Text:
       Text: BGM
@@ -105,3 +110,101 @@ GameObjects:
       IsCenter: true
       ShaderCut: false
       IsKorean: false
+  - Name: SEScrollBar
+    UUID: 7610635975599367528
+    Active: false
+    Layer: Default
+    Instancing: false
+    Type: UI
+    SortingOrder: 1
+    PassIndex: 1
+    Hovering: false
+    Com_Transform:
+      Position: [640, 400]
+      Size: [300, 32]
+    Com_VIBuffer:
+      TexturePath: ..\..\Assets\UITexture\scroll\Turn_long_Scroll.dds
+      TextureMaskPath: ""
+      TextureNoisePath: ""
+      TextureAnyPath: ""
+      Color: [0, 0, 0, 1]
+      Sprite: [0.100000001, 0, 0, 0]
+  - Name: SeScrollBlock
+    UUID: 17039393454624283840
+    Active: false
+    Layer: Default
+    Instancing: false
+    Type: UI
+    SortingOrder: 1
+    PassIndex: 1
+    Hovering: true
+    Com_Transform:
+      Position: [640, 400]
+      Size: [16, 16]
+    Com_VIBuffer:
+      TexturePath: ..\..\Assets\UITexture\scroll\Turn_Scroll_Block.dds
+      TextureMaskPath: ""
+      TextureNoisePath: ""
+      TextureAnyPath: ""
+      Color: [0, 0, 0, 1]
+      Sprite: [0.100000001, 0, 0, 0]
+  - Name: SEText
+    UUID: 16913665797910264319
+    Active: false
+    Layer: Default
+    Instancing: false
+    Type: UI
+    SortingOrder: 1
+    PassIndex: 1
+    Hovering: false
+    Com_Transform:
+      Position: [517, 390.048218]
+      Size: [50, 50]
+    Com_Text:
+      Text: SE
+      Color: [1, 1, 1, 1]
+      Scale: [1, 1]
+      LayerDepth: 0
+      IsCenter: true
+      ShaderCut: false
+      IsKorean: false
+  - Name: CurBgmVolume
+    UUID: 10738467829487332636
+    Active: false
+    Layer: Default
+    Instancing: false
+    Type: UI
+    SortingOrder: 1
+    PassIndex: 1
+    Hovering: false
+    Com_Transform:
+      Position: [751.189819, 353.61441]
+      Size: [96.4367065, 50]
+    Com_Text:
+      Text: "BGM : 50"
+      Color: [1, 1, 1, 1]
+      Scale: [1, 1]
+      LayerDepth: 0
+      IsCenter: true
+      ShaderCut: false
+      IsKorean: true
+  - Name: CurVolume
+    UUID: 6386099594148800019
+    Active: false
+    Layer: Default
+    Instancing: false
+    Type: UI
+    SortingOrder: 1
+    PassIndex: 1
+    Hovering: false
+    Com_Transform:
+      Position: [790.879578, 440.36145]
+      Size: [148.584625, 50]
+    Com_Text:
+      Text: "SE : 50"
+      Color: [1, 1, 1, 1]
+      Scale: [1, 1]
+      LayerDepth: 0
+      IsCenter: true
+      ShaderCut: false
+      IsKorean: true
